# arcanoid-draft

./: CMakeLists.txt  main.cpp  makefile0
headers/: ball.h  block.h  bonus.h  color.h  field.h  figure.h  game.h  glut.h  platform.h  resource.h  text.h  vector.h
src/: ball.cpp  block.cpp  bonus.cpp  circle.cpp  color.cpp  field.cpp  figure.cpp  game.cpp  platform.cpp  rectangle.cpp  text.cpp  vector.cpp
